k8s/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: banking-ingress
  namespace: banking
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /iam(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: iam-service
                port:
                  number: 8081
          - path: /core(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: banking-core-service
                port:
                  number: 8082
          - path: /onboarding(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: onboarding-service
                port:
                  number: 8083
          - path: /kyc(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: kyc-service
                port:
                  number: 8084
          - path: /aml(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: aml-service
                port:
                  number: 8085
          - path: /notifications(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: notification-service
                port:
                  number: 8086
